--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -2477,7 +2477,7 @@ If your package is leaving out the al_package.yml file from the Assembly Line pa
 
 ### Testing unfinished code {#unstable-tip}
 
-If you are still developing your interview, you can still write a [simple test](setup.mdx/#first-test) to make sure your interview at least loads without an error. You might want to wait till your code is more stable to write more tests.
+If you are still developing your interview, you can still write a [simple test](setup#.mdx#first-test) to make sure your interview at least loads without an error. You might want to wait till your code is more stable to write more tests.
 
 On the other hand, if there is a part of your interview that you think will stay pretty much the same, you can write tests that just go part-way through the interview to test just the stable part of the code. That way, you can work on adding more content and yet also be sure that the work you've already done stays working.
 
