--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -267,27 +267,7 @@ You can use some Steps to change what is on the page by filling in fields, press
 
 ### The Story Table Step {#story-table}
 
-Use the "Story Table" Step to fill in multiple fields on multiple pages. It is the Step many of our authors work with the most. In our opinion, it is the most flexible way to fill in fields in your forms, unlike the linear ["I set" Step](#set). This makes a test easier to maintain.
-
-<NeedProxyVars/>
-
-You can use the [story table generator](#alkiln_story) to generate a first draft of a full test file that uses a Story Table based on an interview you have finished.
-
-<!--
-TODO: add an extensive instructions section to the generator. Something like:
-1. If you don't have one already, [add a new test file](#how-do-i-add-a-new-test-file). You can leave out the Scenario.
-1. Ensure your server config is set up to [show debug info](https://docassemble.org/docs/config.html#debug).
-1. Run your interview manually until you reach the page you want the story table to get to.
-1. Open the "source" display of the interview. Currently, that looks like angle brackets, `</>`, in the header of the page.
-1. Note the `id` of the page.
-1. Tap the "Show variables and values" button. It will open a new tab showing a big JSON object.
-1. Copy all the text on that page.
-1. Go to the [story table generator](https://plocket.github.io/alkiln_story/).
-1. Paste the JSON into the text area there, as instructed.
-1. Use the other input fields to help finalize your Scenario, including the page `id`.
-1. Copy the Scenario that has been generated for you.
-1. Paste that into the already prepared test file.
- -->
+Use the "Story Table" Step to [set values of](#values) multiple fields on multiple pages. It is the Step many of our authors work with the most. In our opinion, it is the most flexible way to fill in fields in your forms, unlike the linear ["I set" Step](#set). This makes a test easier to maintain.
 
 The Story Table Step is made of a sentence followed by a table. The data in the table is a snapshot of the user who is filling out the form. Each table row describes one fact about the user - one variable in the interview. It has this format:
 
@@ -298,21 +278,13 @@ The Story Table Step is made of a sentence followed by a table. The data in the 
     | <variable name> | <value to set> |
 ```
 
-As you can see, there are three types of blanks you need to fill in for this Step: `<target question id>`, `<variable name>`, `<value to set>`. The way to use the names of variables and values to [set the values of fields](#values) is the same as the ["I set" Step](#set).
+As you can see, there are three types of blanks you need to fill in for this Step:
 
-- The starting sentence **must** include the question `id`[^id] of a page in the interview.
-- The table **must** include all the variables and values necessary to get a user from the current page to the page with the given question id.
-- The table **must** have two columns with the headings `var` and `value`.
+- `<target question id>` is the `id`[^id] of the `question` block where you want ALKiln to stop using this table.
+- `<variable name>` is the name of an interview variable for a form field. Each table row needs one of these in the first column.
+- `<value to set>` is the value to set for this row's variable name.
 
-On each interview page, ALKiln:
-
-1. Checks if the page has the `<target question id>` you gave it at the start
-1. If the page does have the `<target question id>` it stops the Step
-1. Otherwise, it looks at each `<variable name>` in the `var` column to see if it can find that name in any fields
-1. For each `<variable name>` it finds, it tries to answer the field using the matching `<value to set>`
-1. It tries to continue to the next page
-1. If it is unable to continue it logs an error and stops
-1. Otherwise, it repeats the above
+The table **must** include all the variables and values necessary to get a user from the current page to the page with the given question id. The table **must** have two columns with the headings `var` and `value`.
 
 An example table:
 
@@ -325,23 +297,29 @@ An example table:
     | intro_screen_accepts_terms | True |
 ```
 
-:::tip Docs
+This Step is flexible, which makes the test easier to maintain. The order of the rows is unimportant. That means you can edit the order of your pages or move fields to different pages without worrying about breaking the test. <!-- ALKiln is also fine with extra rows that don't get used (not the same as duplicate rows). If you have duplicate rows in your test, ALKiln will warn you. -->
+
+:::caution .there_is_another
+Avoid using `.there_is_another` in your Story Table. Read about [using `.target_number` instead](#there-is-another).
+:::
+
+**Things to note**
+
+You can use the [Story Table generator](#alkiln_story) to generate a first draft of a full test file.
+
+<NeedProxyVars/>
+
+<!--
+:::tip Setting checkboxes
 Filling in checkboxes is tricky. Check our [documentation about setting checkbox values](#checkboxes).
 :::
 
-This Step is flexible, which makes the test easier to maintain. The order of the rows is unimportant. That means you can edit the order of your pages or move fields to different pages without worrying about breaking the test. <!-- ALKiln is also fine with extra rows that don't get used (not the same as duplicate rows). If you have duplicate rows in your test, ALKiln will warn you. -->
-
-ALKiln sets a table variable every time it finds that variable on a page, no matter how many times that variable appears in your interview.
-
-:::caution .there_is_another
-Avoid using `.there_is_another` in your Story Table. Read about [what to use instead](#there-is-another).
+:::info
+You can use this Step to [upload files](#upload) and [fill in a signature](#sign).
 :::
+-->
 
-You can use multiple Story Tables in a test.<span id="unused-rows"></span><span id="skipped-variable"></span>
-
-Right now, Story Tables are unable to use environment variables to fill in answers, so you cannot use them to [set sensitive information](#secret-val) like passwords.
-
-<!-- TODO: Why are our warnings red instead of yellow -->
+Right now, Story Tables are unable to use environment variables to fill in answers, so you cannot use them to [set sensitive information](#secret-val) like passwords.<span id="unused-rows"></span><span id="skipped-variable"></span>
 
 :::caution Unused rows
 The Story Table does not care about extra rows that never get used. This can make Story Tables easier to write, but it also means that the tests will technically "pass" even if variables that *should* get set are never filled in.
@@ -351,9 +329,22 @@ That can be a sign that a question that the user *should* have seen got skipped 
 Because of this, the ALKiln [report](#report) shows a list of unused rows for each table. You can check the report of passing tests to make sure none of the important rows got skipped.
 :::
 
-:::info
-You can use this Step to [upload files](#upload) and [fill in a signature](#sign).
-:::
+**How this works, for the curious folks out there**
+
+On each interview page, ALKiln:
+
+1. Checks if the page has the `<target question id>` you gave it at the start
+1. If the page does have the `<target question id>` it stops the Step
+1. Otherwise, it looks at each `<variable name>` in the `var` column to see if it can find that name in any fields
+1. For each `<variable name>` it finds, it tries to answer the field using the matching `<value to set>`
+1. On pages with `show if` fields, it waits to see if a new field appears
+1. If one does appear, it looks through each `<variable name>` again
+1. It sets any value it can and repeats this process
+1. When no new fields get revealed, ALKiln tries to continue to the next page
+1. If it is unable to continue it logs an error and stops
+1. Otherwise, it repeats the above
+
+ALKiln sets a table variable every time it finds that variable on any page, no matter how many times that variable appears in your interview.
 
 
 [^id]: You can find the question `id` in your interview YAML in the `question` block of that page. It is a [good idea for every `question` block in your interview to have a unique id](#id-tip). It can be useful for other blocks too.
