Correct links to alkiln story section

--- a/docs/alkiln/intro.mdx
+++ b/docs/alkiln/intro.mdx
@@ -23,7 +23,7 @@ Ready to start testing? Need to quickly refresh your memory on some important po
 
 - [Set up ALKiln for your package](setup.mdx#recommended)
 - [Write your first test](setup.mdx#first-test)
-- [Generate a first draft for more complicated tests](https://plocket.github.io/alkiln_story/)
+- [Generate a first draft for more complicated tests](writing_tests.mdx#alkiln_story)
 
 See [a few more reminders here](writing_tests.mdx#refresh).
 
