--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -36,7 +36,7 @@ If you are writing tests <!-- , running tests, --> or need to learn about test f
 If you are coming back and just need some resource reminders, here is a short list:
 
 - You can see [what your first test might look like](setup.mdx#first-test).
-- You can generate a first draft for a more complex test with the help of the [ALKiln Story Table Step generator](https://github.com/plocket/alkiln_story).
+- You can generate a first draft for a more complex test with the help of the [ALKiln Story Table Step generator](#alkiln_story).
 - If your interview is using generic objects or index variables, you **must** include [special HTML](#special-html) in your interview.
 - Every time you change or add a required field variable, you must update the tests that need that variable.
 - You write and edit `.feature` test files in your package's Sources folder.
