--- a/docs/alkiln/setup.mdx
+++ b/docs/alkiln/setup.mdx
@@ -483,7 +483,7 @@ Tags
 1. Read the notes in that file to see what you need to change to adapt the file for your project. Each of the notes is marked with `#### Developer note`.
 1. Commit the changes.
 
-:::caution
+:::warning
 To use this method, avoid using hard-coded urls to go to a test interview. That is, avoid using `https://my-server.com` to navigate to interviews or other server pages. That will send the tests to your server.
 :::
 
