Gather get-started files in /docs/get-started.
Also removes the /docs/customization folder and fixes broken links related to these changes.

--- a/docs/get_started/contributors.mdx
+++ b/docs/get_started/contributors.mdx
@@ -2,7 +2,7 @@
 id: contributors 
 title: Project Contributors
 sidebar_label: Contributors
-slug: /contributors
+slug: /get_started/contributors
 ---
 
 ## Our Team
