--- a/docs/contributors.mdx
+++ b/docs/contributors.mdx
@@ -243,5 +243,5 @@ The following organizations and groups have generously donated the time of their
 * <a href="https://www.nulawlab.org/"  >Northeastern Law School's NuLawLab</a>
 * <a href="https://www.appgeo.com/"  >AppGeo</a>
 * <a href="https://www.bentley.edu/academics/graduate-programs/masters-human-factors"  >Bentley University Court UX Team</a>
-* <a href="https://community.lawyer/"  >Community Lawyer</a>
+* <a href="https://afterpattern.com/"  >AfterPattern (formerly known as Community Lawyer)</a>
 * <a href="https://www.documate.org/"  >Documate</a>
