--- a/docs/contributors.mdx
+++ b/docs/contributors.mdx
@@ -244,4 +244,4 @@ The following organizations and groups have generously donated the time of their
 * <a href="https://www.appgeo.com/"  >AppGeo</a>
 * <a href="https://www.bentley.edu/academics/graduate-programs/masters-human-factors"  >Bentley University Court UX Team</a>
 * <a href="https://afterpattern.com/"  >AfterPattern (formerly known as Community Lawyer)</a>
-* <a href="https://www.documate.org/"  >Documate</a>
+* <a href="https://gavel.io/"  >Gavel (formerly known as Documate)</a>
