Clarify messaging about trigger and link to new docs

--- a/docs/alkiln/automated_testing.mdx
+++ b/docs/alkiln/automated_testing.mdx
@@ -324,7 +324,7 @@ The last example makes sure that the date is 10 years in the past, ensuring that
 
 ### trigger
 
-([Moving and removing/updating](writing_tests.mdx#special-html))
+(We recommend you [switch to a 2-column Story Table](https://suffolklitlab.org/docassemble-AssemblyLine-documentation/docs/alkiln/trouble/#deprecated-story-tables). We are [moving](writing_tests.mdx#special-html) this old 3-column Story Table documentation.)
 
 `trigger` is an optional value in most cases. It is only mandatory for rows that use [index variables](https://docassemble.org/docs/fields.html#index%20variables), like `i`, `j`, or `k`, or [generic objects](https://docassemble.org/docs/fields.html#generic) (`x`).
 
