Fix broken links

--- a/docs/alkiln/automated_testing.mdx
+++ b/docs/alkiln/automated_testing.mdx
@@ -324,7 +324,7 @@ The last example makes sure that the date is 10 years in the past, ensuring that
 
 ### trigger
 
-(We recommend you [switch to a 2-column Story Table](https://suffolklitlab.org/docassemble-AssemblyLine-documentation/docs/alkiln/trouble/#deprecated-story-tables). We are [moving](writing_tests.mdx#special-html) this old 3-column Story Table documentation.)
+(We recommend you [switch to a 2-column Story Table](https://assemblyline.suffolklitlab.org/docs/alkiln/trouble/#deprecated-story-tables). We are [moving](writing_tests.mdx#special-html) this old 3-column Story Table documentation.)
 
 `trigger` is an optional value in most cases. It is only mandatory for rows that use [index variables](https://docassemble.org/docs/fields.html#index%20variables), like `i`, `j`, or `k`, or [generic objects](https://docassemble.org/docs/fields.html#generic) (`x`).
 
@@ -803,7 +803,7 @@ to get an element on the page. You can add any additional wait time after tappin
 
 ([Moving](writing_tests.mdx#tap-stay))
 
-2. You can also tap on HTML elements without navigating. For example, you can tap on [collapsible content](https://suffolklitlab.org/docassemble-AssemblyLine-documentation/docs/framework/altoolbox#collapsible-help-text) to show the text inside.
+2. You can also tap on HTML elements without navigating. For example, you can tap on [collapsible content](https://assemblyline.suffolklitlab.org/docs/framework/altoolbox#collapsible-help-text) to show the text inside.
 
 ```
     When I tap the "#an_id .al_toggle" element and stay on the same page
@@ -1384,7 +1384,7 @@ When you want to update to a new version of the ALKiln, update that sha manually
 
 ([Moving](security.mdx#freeze))
 
-This section requires prior technical knowledge about [npm](https://docs.npmjs.com/about-npm) and [GitHub workflow files](https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions). Feel free to [ask us](https://suffolklitlab.org/docassemble-AssemblyLine-documentation/docs/#get-involved) any questions you might have.
+This section requires prior technical knowledge about [npm](https://docs.npmjs.com/about-npm) and [GitHub workflow files](https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions). Feel free to [ask us](https://assemblyline.suffolklitlab.org/docs/#get-involved) any questions you might have.
 
 You can use an exact npm version of ALKiln by using your workflow file's `ALKILN_VERSION` input. The default uses a carat, for example `^4.0.0`. That means it will use the latest minor or patch in version 4 of ALKiln. You can instead use an exact version, for example `4.3.0`. See our section on [setting optional inputs](#optional-inputs).
 
@@ -1486,7 +1486,7 @@ Among other things, the workflow file:
 
 You can also use the whole suite of GitHub's workflow and action functionality to do other things, like creating issues when tests fail.
 
-These following sections probably require prior technical knowledge about [GitHub workflow files](https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions). Feel free to [ask us](https://suffolklitlab.org/docassemble-AssemblyLine-documentation/docs/#get-involved) any questions you might have.
+These following sections probably require prior technical knowledge about [GitHub workflow files](https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions). Feel free to [ask us](https://assemblyline.suffolklitlab.org/docs/#get-involved) any questions you might have.
 
 ### Required inputs
 
