--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -565,7 +565,7 @@ This is the only way to explicitly wait after navigating to the new page. Some p
 
 **The Step:**
 
-Use the "tap and stay" Step to tap on HTML elements without navigating to a new page. For example, you can tap on [collapsible content](https://suffolklitlab.org/docassemble-AssemblyLine-documentation/docs/framework/altoolbox#collapsible-help-text) to show the text inside.
+Use the "tap and stay" Step to tap on HTML elements without navigating to a new page. For example, you can tap on [collapsible content](https://assemblyline.suffolklitlab.org/docs/framework/altoolbox#collapsible-help-text) to show the text inside.
 
 The Step format:
 
