Updated story generator instructions

--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -1374,7 +1374,6 @@ You can use the [story table generator](https://plocket.github.io/alkiln_story/)
 
 Follow these instructions to use the generator:
 
-1. If you don't have one already, [add a new test file](#how-do-i-add-a-new-test-file). You can leave out the Scenario.
 1. Ensure your server config is set up to [show debug info](https://docassemble.org/docs/config.html#debug).
 1. Run your interview manually until you reach the page you want the story table to get to.
 1. Open the "source" display of the interview. Currently, that looks like angle brackets, `</>`, in the header of the page.
@@ -1383,9 +1382,9 @@ Follow these instructions to use the generator:
 1. Copy all the text on that page.
 1. Go to the [story table generator](https://plocket.github.io/alkiln_story/).
 1. Paste the JSON into the text area there, as instructed.
-1. Use the other input fields to help finalize your Scenario, including the page `id`.
-1. Copy the Scenario that has been generated for you.
-1. Paste that into the already prepared test file.
+1. Use the other input fields to help finalize your Scenario, including the question `id`.
+1. Download the file the generator created. It should end in `.feature`.
+1. Upload that `.feature` file into your "Sources" folder in your Project.
 
 
 ## Test file anatomy {#test-files}
